--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+spring.data.mongodb.database=events_db
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
 
 server.port = 8087
