--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.data.mongodb.database=events_db
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+#sssssss
 
 server.port = 8087
